--- a/index.html
+++ b/index.html
@@ -23,34 +23,41 @@
         <h4 class="header center blue-grey-text text-lighten-5">bookmark your favourite site.</h4>
         <br>
         <div class="row">
-          <form class="col s12">
+          <form id="bookmark-form" class="col s12">
             <div class="row">
               <div class="input-field col s12">
-                <input class="center validate" type="text" name="name" placeholder="Website Name">
-                <input class="center validate" type="url" name="url" placeholder="Website URL">
+                <input class="center validate" type="text" name="siteName" placeholder="Website Name" required>
+                <input class="center validate" type="url" name="siteURL" placeholder="Website URL" required>
               </div>
+            </div>
               <div class="row center">
-                <button class="btn waves-effect waves-light pulse amber darken-3" type="submit" name="submit">
+                <button class="btn waves-effect waves-light amber darken-3" type="submit" name="submit">
                   <i class="material-icons left">bookmark</i>
                   Bookmark
               </button>
             </div>
-            </div>
           </form>
+        </div>
+        <div class="row center">
+          <button id="clear-bookmarks" class="btn waves-effect waves-light amber darken-3" type="button" name="button"><i class="material-icons left">delete</i>Clean Bookmarks</button>
         </div>
       </div>
 
 
-    <div class="card-panel">
+      <div class="card-panel">
 
-      <h4 class="center">your bookmarks:</h4>
-      <div class="collection">
-        <a href="#!" class="collection-item deep-purple-text text-darken-3">Alvin</a>
-        <a href="#!" class="collection-item deep-purple-text text-darken-3">Alvin</a>
-        <a href="#!" class="collection-item deep-purple-text text-darken-3">Alvin</a>
-        <a href="#!" class="collection-item deep-purple-text text-darken-3">Alvin</a>
+        <h4 class="center">your bookmarks:</h4>
+        <div class="collection">
+          <a href="#!" class="collection-item deep-purple-text text-darken-3">Alvin</a>
+          <a href="#!" class="collection-item deep-purple-text text-darken-3">Alvin</a>
+          <a href="#!" class="collection-item deep-purple-text text-darken-3">Alvin</a>
+          <a href="#!" class="collection-item deep-purple-text text-darken-3">Alvin</a>
+        </div>
       </div>
     </div>
-    </div>
+
+
+    <!-- Make sure the script is placed in the bottom of the BODY element of the document you're trying to manipulate, not in the HEAD element or placed before any of the elements you want to "get". -->
+    <script src="js/main.js"></script>
   </body>
 </html>
